stylesheet.css
@import url(http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300ita‌​lic,400italic,500,500italic,700,700italic,900italic,900);

/* Refactor all these classes and attributes */

body {
    display: flex;
    margin: 0;
    font-family: Roboto, sans-serif;
    flex-direction: column;
    justify-content: space-between;
    flex:1;
}

ul {
    text-decoration: none;
    list-style-type: none;
    color: #e5e7eb;
    margin: 0;
    padding: 0; 
    display: flex;
    gap: 25px;
    font-size: 18px;
}

.header {
    display: flex;
    background-color: #1F2937;
    flex: 1;
    justify-content: space-between;
    padding-left: 14%;
    padding-right: 14%;
    padding-top: 8px;
}

.logo {
    color: #f9faf8;
    font-size: 24px;
}

.left, .right {
    display: flex;
    align-items: center;
    gap: 16px;
    padding: 8px;
  }

a {
    text-decoration: none;
    color: #f9faf8;
    align-self: flex-end;
}

.first-section
{   
    display: flex;
    flex:1;
    justify-content: center;
    background-color: #1F2937;
    color: #f9faf8;
    padding-top: 120px;
    padding-left: 14%;
    padding-right: 14%;
    padding-bottom: 160px;
}

.main-text {
    font-size: 48px;
    font-weight: bolder;
}

.first-left .text {
    font-size: 18px;
}


.first-left {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    padding-right: 8%;
}

.signup-button {
    display: flex;
    padding: 5px;
    flex-shrink: 0;
}

button {
    background-color: #3882f6;
    border-radius: 8px;
    padding: 8px 16px;
    border: 1px solid royalblue;
    color:#f9faf8;
    cursor: pointer;
    border-color: #e5e7eb;
}

.first-section img {
    outline: auto;
    border-radius: 3%;
    
}

.footer
{
    display: flex;
    background-color: #1F2937;
    align-items: center;
    justify-content: center;
    padding: 35px;
    color: #f9faf8;
    font-weight: 300;
    width: 100%;
}

.content {
    display: flex;
    flex-direction: column;
    align-items: center;
    /* justify-content: center; */
    
}

.second-section {
    display: flex;
    flex-direction: column;
    padding-top: 30px;
    align-items: center;
}

.headersecond {
    font-size: 36px;
    font-weight: bolder;
    margin-bottom: 16px;
    padding-left: 14%;
    padding-right: 14%;
}

.container-information {
    display: flex;
    align-self: center;
    justify-content: center;
    gap: 8px;
    padding-bottom: 60px;
}

.info {
    width: 13%;
    display: flex;
    justify-content: center;
    flex-direction: column;
    padding: 15px;
    flex-shrink: 1;
    min-width: 0;
}

.quote-section {
    background-color: #e5e7eb;
    display: flex;
    width:100%;
    flex-direction: column;
    align-items: center;
    
}

.quote {
    display: flex;
    align-items: center;
    justify-content: center;
    text-align:left;
    font-size: 36px;
    font-style:italic;
    font-weight:lighter;
    color: #1d2937;
    width: 55%;
    
    margin-top: 100px;
    
}

.who {
    align-self: flex-end;
    padding-right: 25%;
    margin-bottom: 80px; 
    font-size: 18px;   
    font-weight: bolder;
}

.info-img {
    border-radius: 3%;
    flex-basis: 170px;
    height: 170px;
    outline: auto;
    outline-color: #3882f6;
    outline-width: medium;
    margin-bottom: 20px;
    text-align: center;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-shrink: 1;
    min-width: 0;
}

.info-img img {
    max-width: 100%;
    min-width: 0;
    border-radius: 5px;
    opacity: 0.5;
    max-height: 100%;
}

.info .text {
    width:100% ;
}

.signup-section {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 90px;
}

.container-signup {
    display: flex;
    background-color: #3882f6;
    padding:100px ;
    padding-top: 50px;
    padding-bottom: 50px;
    border-radius: 10px;
    color: #e5e7eb;
    gap: 70px;
    align-items: center;

}

